# IntegracaoEletraSDK

./: .gitignore
PROJETO02/: CMakeLists.txt
PROJETO02/include/: Apolo.h  App.h  Application.h  Ares.h  Cronos.h  EletraEnergySolutions.h  MedidorDeEnergia.h  Utils.h  Zeus.h  fabrica_de_medidor.h  medidor.h  medidor_de_energia.h  menu.h  menus.h
PROJETO02/include/services/: ApplicationServices.h  UtilsApplicationServices.h
PROJETO02/protos/: Application.proto  CmakeLists.txt
PROJETO02/src/: Apolo.cpp  App.cpp  Application.cpp  Ares.cpp  AresMeter.cpp  Cronos.cpp  EletraEnergySolution.cpp  MedidorDeEnergia.cpp  fabrica_de_medidor.cpp  main.cpp  medidor_de_energia.cpp  menu.cpp  menus.cpp  zeus.cpp
PROJETO02/src/Services/: ApplicationServices.cpp  UtilsApplicationServices.cpp
PROJETO02/tests/: CMakeLists.txt  test_Apolo.cpp  test_Ares.cpp  test_Cronos.cpp  test_EletraEnergySolutions.cpp  test_UtilsApplicationServices.cpp  test_Zeus.cpp  test_factory.cpp
PROJETO1/: CMakeLists.txt
PROJETO1/include/: controle.h  intro.h  medidores_de_agua.h  medidores_de_energia.h  menu.h  religadores.h  utilidades.h
PROJETO1/src/: Console.cpp  controle.cpp  medidores_de_agua.cpp  medidores_de_energia.cpp  menu.cpp  religadores.cpp  utilidades.cpp
PROJETO2/: CMakeLists.txt
PROJETO2.1/: CMakeLists.txt  lista.cpp  lista_UP.cpp
PROJETO2.1/include/: ares.h  criador.h  criador_de_ares.h  criador_de_cronos.h  criador_de_zeus.h  cronos.h  medidor_de_energia.h  zeus.h
PROJETO2.1/src/: main.cpp  medidor_de_energia.cpp
PROJETO2/include/: Application.h  EletraEnergySolutions.h  Medidor.h  Menus.h
PROJETO2/include/medidor_de_energia/: Ares.h  Cronos.h  Zeus.h  controle.h  medidor_de_energia.h
PROJETO2/src/: Application.cpp  EletraEnergySolutions.cpp  Menus.cpp  main.cpp
PROJETO2/src/medidor_de_energia/: Ares.cpp  Cronos.cpp  Zeus.cpp  controle.cpp  medidor_de_energia.cpp
PROJETO2/tests/: CMakeLists.txt
PROJETO2/tests/src/: test_EletraEnergySolutions.cpp  test_Menus.cpp
PROJETO3/: CmakeLists.txt
PROJETO3/include/: MedidorDeEnergia.h  Zeus.h
PROJETO3/protos/: Application.proto  PROJETO03.proto
PROJETO3/src/: MedidorDeEnergia.cpp  main.cpp
time_test/: main.cpp
